# kwin6-effect-blackhole-singularity-native

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cursor/: glassblurimplementation.md
reference/: glide.h
src/: blackholesingularityconfig.cpp  blackholesingularityeffect.cpp  blackholesingularityeffect.h  main.cpp  plugin.json
src/shaders/: blackhole.frag
